--- a/Projekt-programowanie/Views/Shared/_Layout.cshtml
+++ b/Projekt-programowanie/Views/Shared/_Layout.cshtml
@@ -41,7 +41,33 @@
                                         </li>
                                     </ul>
                                 </div>
-
+                                <div class="dropdown">
+                                    <button class="btn btn-light border" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Survey
+                                    </button>
+                                    <ul class="dropdown-menu shadow-sm" aria-labelledby="dropdownMenuButton" style="border: 1px solid #dee2e6; border-radius: 0.25rem;">
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Surveys" asp-action="Index">
+                                                Survey list
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Surveys" asp-action="Create">
+                                                Add Survey
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Questions" asp-action="Index">
+                                                Question list
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Questions" asp-action="Create">
+                                                Add question
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                                 <div class="dropdown">
                                     <button class="btn btn-light border" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                                         Groups
