feat: Add Surveys #20

--- a/Projekt-programowanie/Views/Shared/_Layout.cshtml
+++ b/Projekt-programowanie/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <div class="d-flex align-items-center">
+                            
 							@if (User.IsInRole("admin") || User.IsInRole("employee"))
                             {
                                 <div class="dropdown">
@@ -41,33 +42,7 @@
                                         </li>
                                     </ul>
                                 </div>
-                                <div class="dropdown">
-                                    <button class="btn btn-light border" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                                        Survey
-                                    </button>
-                                    <ul class="dropdown-menu shadow-sm" aria-labelledby="dropdownMenuButton" style="border: 1px solid #dee2e6; border-radius: 0.25rem;">
-                                        <li>
-                                            <a class="dropdown-item" asp-controller="Surveys" asp-action="Index">
-                                                Survey list
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item" asp-controller="Surveys" asp-action="Create">
-                                                Add Survey
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item" asp-controller="Questions" asp-action="Index">
-                                                Question list
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="dropdown-item" asp-controller="Questions" asp-action="Create">
-                                                Add question
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
+                                
                                 <div class="dropdown">
                                     <button class="btn btn-light border" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                                         Groups
@@ -85,6 +60,8 @@
                                         </li>
                                     </ul>
                                 </div>
+
+
                             }
                             @if(User.Identity.IsAuthenticated)
                             {
@@ -92,6 +69,18 @@
                                     <a asp-controller="Scheduler" asp-action="Index" class="btn btn-light border" type="button">
                                         Scheduler
                                     </a>
+                                </div>
+                                <div class="dropdown">
+                                    <button class="btn btn-light border" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Survey
+                                    </button>
+                                    <ul class="dropdown-menu shadow-sm" aria-labelledby="dropdownMenuButton" style="border: 1px solid #dee2e6; border-radius: 0.25rem;">
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="Survey" asp-action="Index">
+                                                Survey list
+                                            </a>
+                                        </li>
+                                    </ul>
                                 </div>
                             } 
                         </div>
