--- a/Projekt-programowanie/Views/Survey/Create.cshtml
+++ b/Projekt-programowanie/Views/Survey/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProjektProgramowanie.Models.Survey
+﻿@model ProjektProgramowanie.Models.SurveyViewModel
 
 @{
     ViewData["Title"] = "Add Survey";
