--- a/Projekt-programowanie/Views/Account/Register.cshtml
+++ b/Projekt-programowanie/Views/Account/Register.cshtml
@@ -24,6 +24,11 @@
     </div>
 
     <div class="form-group">
+        <label for="Adress">Adress</label>
+        <input type="text" id="Adress" name="Adress" class="form-control" value="@Model.Adress" required />
+    </div>
+
+    <div class="form-group">
         <label for="Password">Password</label>
         <input type="password" id="Password" name="Password" class="form-control" required />
     </div>
