--- a/Projekt-programowanie/Views/Account/Delete.cshtml
+++ b/Projekt-programowanie/Views/Account/Delete.cshtml
@@ -1,10 +1,12 @@
 ﻿@model ProjektProgramowanie.Models.UserWithRolesViewModel
 
 @{
-    ViewData["Title"] = "User Details";
+    ViewData["Title"] = "Delete User";
 }
 
 <h1>@ViewData["Title"]</h1>
+
+<h3>Are you sure you want to delete the following user?</h3>
 
 <div>
     <h4>User</h4>
@@ -24,9 +26,10 @@
 
         <dt class="col-sm-2">Created At</dt>
         <dd class="col-sm-10">@Model.CreatedAt</dd>
-
-        <dt class="col-sm-2">Roles</dt>
-        <dd class="col-sm-10">@string.Join(", ", Model.Roles)</dd>
     </dl>
-    <a href="@Url.Action("Index", "Account")" class="btn btn-secondary">Back to List</a>
 </div>
+
+<form asp-action="DeleteConfirmed" asp-route-id="@Model.UserId" method="post">
+    <button type="submit" class="btn btn-danger">Delete</button>
+    <a href="@Url.Action("Index", "Account")" class="btn btn-secondary">Cancel</a>
+</form>
