--- a/Projekt-programowanie/Views/Account/Index.cshtml
+++ b/Projekt-programowanie/Views/Account/Index.cshtml
@@ -1,10 +1,24 @@
 ﻿@model IEnumerable<ProjektProgramowanie.Models.UserWithRolesViewModel>
 
 @{
-    ViewData["Title"] = "Users List";
+    ViewData["Title"] = "Active users list";
 }
 
 <h1>@ViewData["Title"]</h1>
+
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">
+        @TempData["SuccessMessage"]
+    </div>
+}
+
+@if (TempData["ErrorMessage"] != null)
+{
+    <div class="alert alert-danger">
+        @TempData["ErrorMessage"]
+    </div>
+}
 
 <table class="table">
     <thead>
@@ -29,8 +43,9 @@
                 <td>@item.CreatedAt</td>
                 <td>@string.Join(", ", item.Roles)</td>
                 <td>
-                    <a href="@Url.Action("Detail", new { id = item.UserId })">Details</a> |
-                    <a href="@Url.Action("Edit", new { id = item.UserId })">Edit</a>
+                    <a href="@Url.Action("Detail", new { id = item.UserId })" class="btn btn-info btn-sm">Details</a>
+                    <a href="@Url.Action("Edit", new { id = item.UserId })" class="btn btn-warning btn-sm">Edit</a>
+                    <a href="@Url.Action("Delete", new { id = item.UserId })" class="btn btn-danger btn-sm">Delete</a>
                 </td>
             </tr>
         }
