--- a/Projekt-programowanie/Views/Groups/Index.cshtml
+++ b/Projekt-programowanie/Views/Groups/Index.cshtml
@@ -26,8 +26,8 @@
                     </ul>
                 </td>
                 <td>
-                    <a class="btn btn-primary" href="@Url.Action("Edit", "Groups", new { id = group.Id })">Edit</a>
-                    <a class="btn btn-danger" href="@Url.Action("Delete", "Groups", new { id = group.Id })">Delete</a>
+                    <a class="btn btn-info btn-sm" href="@Url.Action("Edit", "Groups", new { id = group.Id })">Edit</a>
+                    <a class="btn btn-danger btn-sm" href="@Url.Action("Delete", "Groups", new { id = group.Id })">Delete</a>
                 </td>
             </tr>
         }
