--- a/Projekt-programowanie/Views/ContactForm/List.cshtml
+++ b/Projekt-programowanie/Views/ContactForm/List.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<ProjektProgramowanie.Controllers.ContactFormController.ContactFormViewModel>
 
 @{
-    ViewData["Title"] = "Lista Formularzy Kontaktowych";
+    ViewData["Title"] = "List of Contact Forms";
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -10,8 +10,8 @@
     <thead>
         <tr>
             <th>ID</th>
-            <th>Tytuł</th>
-            <th>Treść</th>
+            <th>Title</th>
+            <th>Content</th>
             <th>Email</th>
         </tr>
     </thead>
