--- a/Projekt-programowanie/Views/Survey/Create.cshtml
+++ b/Projekt-programowanie/Views/Survey/Create.cshtml
@@ -6,8 +6,7 @@
 
 <form asp-action="Create" method="post">
     <div class="form-group">
-        <label asp-for="LessonId" class="control-label"></label>
-        <input asp-for="LessonId" class="form-control" readonly/>
+        <input asp-for="LessonId" class="form-control" readonly hidden/>
         <span asp-validation-for="LessonId" class="text-danger"></span>
     </div>
 
@@ -24,8 +23,7 @@
     </div>
 
     <div class="form-group">
-        <label asp-for="StudentId" class="control-label"></label>
-        <input asp-for="StudentId" class="form-control" readonly />
+        <input asp-for="StudentId" class="form-control" readonly hidden/>
         <span asp-validation-for="StudentId" class="text-danger"></span>
     </div>
 
